--- a/gleam.toml
+++ b/gleam.toml
@@ -14,6 +14,7 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
+glssh_core = { path = "../glssh_core" }
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
